# cpp-graduate

cache/: CMakeLists.txt  README.md
cache/bench/: CMakeLists.txt  bench.cpp
cache/include/: cache.h
cache/src/: belady.cpp  cache.cpp
cache/tests/: CMakeLists.txt  tests.cpp
triangle/: CMakeLists.txt  README.md
triangle/include/: geometry.h  line.h  line_segm.h  plane.h  point.h  triangle.h  vector.h
triangle/src/: line.cpp  line_segm.cpp  main.cpp  plane.cpp  point.cpp  triangle.cpp  vector.cpp
triangle/tests/: CMakeLists.txt  tests.cpp
